# research-paper-judge

./: .gitignore  DEMO-REPORT.md  README.md  for-agent.md  learnings.md  phase-2.md  test-report.md
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  authenticity_agent.py  consistency_agent.py  evaluator_agent.py  factcheck_agent.py  grammar_agent.py  novelty_agent.py
backend/app/api/: routes.py  schemas.py
backend/app/constants/: __init__.py  enums.py
backend/app/db/: __init__.py  repository.py  schema.py
backend/app/extraction/: __init__.py  arxiv_meta.py  pdf_downloader.py  pdf_extractor.py
backend/app/prompts/: authenticity.py  consistency.py  evaluator.py  factcheck.py  grammar.py  novelty.py  page_tagger.py
backend/app/services/: __init__.py  llm_service.py
backend/app/structuring/: section_tagger.py
backend/app/types/: __init__.py  agent_types.py  paper_types.py  state_types.py
backend/app/utils/: __init__.py  json_parser.py  logger.py  token_counter.py
frontend/: .env.example  app.py  pyproject.toml
