[project]
name = "research-validator-backend"
version = "0.1.0"
description = "Research Validator Backend - FastAPI + LangGraph"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Agent orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",

    # Config + validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",

    # HTTP client (used for OpenRouter, arXiv API, Semantic Scholar)
    "httpx>=0.27.0",

    # PDF extraction
    "pymupdf4llm>=0.0.17",
    "PyMuPDF>=1.25.0",

    # Token counting (OpenAI tokenizer — close enough for Gemini)
    "tiktoken>=0.8.0",

    # PDF report generation (pure Python, zero system deps)
    "fpdf2>=2.8.0",

    # PostgreSQL async driver (NeonDB)
    "asyncpg>=0.30.0",

    # Logging + CLI output
    "rich>=13.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
